[package]
default-run = "bot"
edition = "2021"
name = "custos"
version = "0.1.0"

[dependencies]
diesel = {version = "1.4", default-features = false, features = ["sqlite", "r2d2"]}
dotenv = "0.15"
ron = "0.7"
serde = {version = "1.0", features = ["derive"]}
serenity = "0.11"
strum = {version = "0.24", features = ["derive"]}
tokio = {version = "1.18", features = ["full"]}
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "registry"] }

[dependencies.libsqlite3-sys]
version = "*"
features = ["bundled"]

[[bin]]
name = "bot"
path = "src/bin/bot.rs"

[[bin]]
name = "diesel_run"
path = "src/bin/diesel_run.rs"
